Feat: nested objects accessed